<resources>

    <string name="app_name">Android Software Engineering</string>


    <string name="text_practice_1">Practice 1</string>
    <string name="text_red">Red</string>
    <string name="text_green">Green</string>
    <string name="text_blue">Blue</string>


    <string name="text_practice_2">Practice 2</string>
    <string name="text_sum">+</string>
    <string name="text_subtract">-</string>
    <string name="text_multiply">×</string>
    <string name="text_divide">/</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
    <string name="text_number_7">7</string>
    <string name="text_number_8">8</string>
    <string name="text_number_9">9</string>
    <string name="text_number_0">0</string>
    <string name="text_clear">Clear</string>
    <string name="text_back">Back</string>
    <string name="text_calculate">=</string>
    <string name="text_calculation_result">Calculation Result</string>
    <string name="text_ok">OK</string>
    <string name="text_remove_sign">⌫</string>
    <string name="text_calculation_failed">Calculation Failed</string>


    <string name="text_lab_1">Lab 1</string>
    <string name="text_add_note">Add note</string>
    <string name="text_filter">Filter</string>
    <string name="text_search">Search</string>

</resources>
