<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_practice_2_txv_statement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/colorGreyLight"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="@dimen/activity_practice_2_txv_text_size"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGreyDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_practice_2_txv_sum"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_sum"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_operation_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_subtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_subtract"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_operation_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_multiply"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_operation_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_divide"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_operation_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_remove"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_remove_sign"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_operation_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_practice_2_txv_number_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_1"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_number_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_2"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_number_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_3"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGreyDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_practice_2_txv_number_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_4"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_number_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_5"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_number_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_6"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGrey"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_practice_2_txv_number_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_7"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_number_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_8"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_number_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_9"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGreyDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_practice_2_txv_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_clear"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_number_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_number_0"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_practice_2_txv_calculate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/text_calculate"
                android:textAlignment="center"
                android:textSize="@dimen/activity_practice_2_txv_text_size"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>