<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_practice_1_llt_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/activity_practice_1_v_palette"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <SeekBar
            android:id="@+id/activity_practice_1_skb_green"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintBottom_toTopOf="@id/activity_practice_1_skb_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_practice_1_txv_green"
            app:layout_constraintTop_toBottomOf="@id/activity_practice_1_skb_red" />

        <SeekBar
            android:id="@+id/activity_practice_1_skb_red"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/activity_practice_1_skb_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_practice_1_txv_red"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/activity_practice_1_skb_blue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_practice_1_txv_blue"
            app:layout_constraintTop_toBottomOf="@id/activity_practice_1_skb_green" />

        <TextView
            android:id="@+id/activity_practice_1_txv_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_red"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/activity_practice_1_skb_red"
            app:layout_constraintEnd_toStartOf="@id/activity_practice_1_skb_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/activity_practice_1_skb_red"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/activity_practice_1_txv_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_green"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/activity_practice_1_skb_green"
            app:layout_constraintEnd_toStartOf="@id/activity_practice_1_skb_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/activity_practice_1_skb_green"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/activity_practice_1_txv_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_blue"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/activity_practice_1_skb_blue"
            app:layout_constraintEnd_toStartOf="@id/activity_practice_1_skb_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/activity_practice_1_skb_blue"
            app:layout_constraintWidth_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>